// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationMap renders default 1`] = `
<div
  class="css-1fnaylc"
>
  <dl
    class="css-1mqjlka"
  >
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with actions 1`] = `
<div
  class="css-1fnaylc"
>
  <dl
    class="css-1mqjlka"
  >
    <div
      class="css-dcg1uu"
    >
      <dt
        class="css-1bnt6tn"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
      >
        Jane Doe
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
      >
        <button
          class="css-1vveheu"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-dcg1uu"
    >
      <dt
        class="css-1bnt6tn"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
      >
        UX Designer
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
      >
        <button
          class="css-1vveheu"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-dcg1uu"
    >
      <dt
        class="css-1bnt6tn"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
      >
        San Francisco
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
      >
        <button
          class="css-1vveheu"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with default value 1`] = `
<div
  class="css-1fnaylc"
>
  <dl
    class="css-1mqjlka"
  >
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
      >
        —
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
      >
        —
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with headline 1`] = `
<div
  class="css-1fnaylc"
>
  <dl
    class="css-1mqjlka"
  >
    <h1
      class="css-14una7e"
    >
      Jane Doe Info
    </h1>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-13rkv0z"
    >
      <dt
        class="css-1bnt6tn"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;
